--- a/main-service/pom.xml
+++ b/main-service/pom.xml
@@ -25,6 +25,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
@@ -32,7 +38,7 @@
 
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>service</artifactId>
+            <artifactId>client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
