--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+stats-service.url=http://localhost:9090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -9,6 +10,6 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/main-service-db}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:6542/main-service-db}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:main-service-explorer}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:just_explorer_but main}
